fix(gpth/tooltips): Resolve positioning and overlapping issues in GPThemes settings
- Fix tooltip positioning to prevent overlapping in GPThemes custom settings
- Adjust `z-index` to ensure proper layering, especially for larger tooltips (e.g., big card tooltips in the "Fonts" tab)
- Ensure tooltips appear above other elements and do not get hidden behind smaller cards or components

Changes summary:
Resolved tooltip positioning and overlapping issues in GPThemes settings by adjusting `z-index` and ensuring proper layering for a seamless user experience.

--- a/src/sass/gpthemes/theme-manager/components/_cards.scss
+++ b/src/sass/gpthemes/theme-manager/components/_cards.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     font-size: 1.6rem;
-    // position: relative;
+    position: relative;
     // z-index: -1;
 
 
@@ -212,6 +212,7 @@
         --p: .9rem;
         border-radius: 1.5rem;
         padding: var(--p);
+        z-index: 1;
 
         @include dev('sm') {
             --p: 0.5rem;
@@ -242,6 +243,7 @@
             color: var(--c-accent);
             font-size: 0.5em;
             margin-bottom: 0.2rem;
+            transition: translate 0.2s ease-in-out;
         }
 
         select,
@@ -277,6 +279,10 @@
 
         &:hover {
             // transform: translateY(2px);
+
+            .card__name {
+                translate: 0 2px;
+            }
 
             input,
             select {
